// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`watch correctly adds and removes sources 1`] = `
{
  "tests/__fixtures__/watch/index.js": [
    "tests/out/9a78c98ead7de3feab7b7bb103c1aa56/main.js",
  ],
}
`;

exports[`watch correctly adds and removes sources 2`] = `
{
  "tests/__fixtures__/watch/index.js": [
    "tests/out/9a78c98ead7de3feab7b7bb103c1aa56/main.js",
  ],
  "tests/__fixtures__/watch/pass1.js": [
    "tests/out/9a78c98ead7de3feab7b7bb103c1aa56/main.js",
  ],
}
`;

exports[`watch correctly adds and removes sources 3`] = `
{
  "tests/__fixtures__/watch/index.js": [
    "tests/out/9a78c98ead7de3feab7b7bb103c1aa56/main.js",
  ],
}
`;
